--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,7 @@
 {
   "name": "prettus/l5-repository",
   "description": "Laravel 5|6|7|8|9|10|11 - Repositories to  the database layer",
-  "keywords": [
-    "laravel",
-    "repository",
-    "eloquent",
-    "model",
-    "cache"
-  ],
+  "keywords": ["laravel", "repository", "eloquent", "model", "cache"],
   "license": "MIT",
   "authors": [
     {
@@ -20,9 +14,9 @@
   "homepage": "http://andersao.github.io/l5-repository",
   "support": {
     "email": "contato@andersonandra.de",
-    "issues":"https://github.com/andersao/l5-repository/issues",
-    "wiki":"https://github.com/andersao/l5-repository",
-    "source":"https://github.com/andersao/l5-repository",
+    "issues": "https://github.com/andersao/l5-repository/issues",
+    "wiki": "https://github.com/andersao/l5-repository",
+    "source": "https://github.com/andersao/l5-repository",
     "docs": "http://andersao.github.io/l5-repository"
   },
   "require": {
@@ -33,8 +27,7 @@
     "illuminate/pagination": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0|^11.0",
     "illuminate/console": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0|^11.0",
     "illuminate/filesystem": "~5.0|~6.0|~7.0|^8.0|^9.0|^10.0|^11.0",
-    "prettus/laravel-validation": "~1.1|~1.2|~1.3|~1.4",
-   
+    "prettus/laravel-validation": "~1.1|~1.2|~1.3|~1.4"
   },
   "autoload": {
     "psr-4": {
@@ -51,9 +44,7 @@
   },
   "extra": {
     "laravel": {
-      "providers": [
-        "Prettus\\Repository\\Providers\\RepositoryServiceProvider"
-      ]
+      "providers": ["Prettus\\Repository\\Providers\\RepositoryServiceProvider"]
     }
   },
   "minimum-stability": "stable"
